--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</header>
 							
 						</div>
-						<div class="image"><img src="images/Janine_picture.jpg" alt="" width="350" height="388"/></div>
+						<div class="image"><img src="images/Janine_picture.jpg" alt="" width="300" height="332"/></div>
 					</section>
 
 				<!-- Two -->
@@ -106,7 +106,7 @@
 									<br>
 									After living in Trinidad for eight years (2006-2013), the country of her birth, Janine decided to join the Director’s Guild of 
 									Canada in Toronto and work as an Assistant Director on Director Guillermo Del Toro’s dramatic, psycho-thriller film, 
-									<b>NIGHTMARE ALLEY</b>, starring Bradley Cooper, Cate Blanchet and Rooney Mara. She has also worked as an Assistan Director for series such as  <b>STAR TREK</b>, <b>LAW AND ORDER TORONTO</b> and Netflix’s 
+									<b>NIGHTMARE ALLEY</b>, starring Bradley Cooper, Cate Blanchet and Rooney Mara. She has also worked as an Assistant Director for series such as  <b>STAR TREK</b>, <b>LAW AND ORDER TORONTO</b> and Netflix’s 
 									<b>CABINET OF CURIOSITIES</b> to mention a few.</p>
 							</div>
 						</section>
