--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</header>
 							
 						</div>
-						<div class="image"><img src="images/Janine_picture.jpg" alt="" width="300" height="332"/></div>
+						<div class="image"><img src="images/Janine_picture.jpg" alt="" width="270" height="300"/></div>
 					</section>
 
 				<!-- Two -->
@@ -120,6 +120,8 @@
 								<br>
 								<br>
 								<b>DAI AILIAN – THE WOMAN WHO DARED</b> (non-fiction, documentary)</p>
+							
+							<hr width="100%" size="2">
 						</header>
 						<section class="spotlight">
 							<div class="image"><img src="images/IMG_7724.jpeg" alt="" /></div>
