--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 							<h2>PROJECTS IN DEVELOPMENT</h2>
 							<p><b>THE MOTORHOME</b>  (fiction film, dramatic comedy)
 								<br>
-								<br>
-								<br>
-							<b>DAI AILIAN – THE WOMAN WHO DARED</b> (non-fiction, documentary)</p>
+							</p>
+								
+							<p></p><b>DAI AILIAN – THE WOMAN WHO DARED</b> (non-fiction, documentary)</p>
 							
 							<hr width="100%" size="2">
 						</header>
