--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<section id="three" class="wrapper style3 special">
 						<header class="major">
 							<h2>PROJECTS IN DEVELOPMENT</h2>
-							<p><b>THE MOTORHOME</b>  (fiction film, dramatic comedy)
+							<p><b>THE MOTORHOME  (fiction film, dramatic comedy) </b>
 								<br>
 							</p>
 								
